<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <ImageButton
                android:id="@+id/add"
                android:onClick="addToWishist"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_gravity="end"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:src="@drawable/ic_add_circle_outline_black_70dp" />

            <ImageButton
                android:id="@+id/remove"
                android:onClick="removeFromWishlist"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_gravity="end"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:src="@drawable/ic_remove_circle_outline_black_70dp" />

            <ImageButton
                android:id="@+id/more"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:paddingRight="10dp"
                android:layout_gravity="end"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_more_vert_black_70dp"
                android:onClick="showMoreOptionsMenu"/>

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/wholePage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_info"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="25dp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/no_image"
                android:padding="10dp"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/redGamestop"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:text="@string/newPrice"/>

                    <TextView
                        android:id="@+id/newPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:text=""/>

                    <TextView
                        android:id="@+id/oldNewPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/redGamestop"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="3dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:text="@string/usedPrice"/>

                    <TextView
                        android:id="@+id/usedPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:text=""/>

                    <TextView
                        android:id="@+id/oldUsedPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:text=""/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publisher"
                        android:textSize="17dp"/>

                    <TextView
                        android:id="@+id/publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_info"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/platform"
                        android:textSize="17dp"/>

                    <TextView
                        android:id="@+id/platform"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_info"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genres"
                        android:textSize="17dp"/>

                    <TextView
                        android:id="@+id/genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_info"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="17dp"/>

                    <TextView
                        android:id="@+id/releaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_info"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/players"
                        android:textSize="17dp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/players"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_info"
                        android:textStyle="bold"
                        android:textSize="17dp"
                        android:gravity="right"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/pegiAge"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/pegi18"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"/>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/pegiBadLanguage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/bad_language"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"/>

                    <ImageView
                        android:id="@+id/pegiDiscrimination"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/discrimination"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="10dp"/>

                    <ImageView
                        android:id="@+id/pegiDrugs"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/drugs" />

                    <ImageView
                        android:id="@+id/pegiFear"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/fear"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="10dp"/>

                    <ImageView
                        android:id="@+id/pegiGambling"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/gambling"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="10dp"/>

                    <ImageView
                        android:id="@+id/pegiOnline"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/online"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="10dp"/>

                    <ImageView
                        android:id="@+id/pegiSex"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/sex"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="10dp"/>

                    <ImageView
                        android:id="@+id/pegiViolence"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/violence"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="10dp"/>

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/progressBarOnDownlaod"/>

</LinearLayout>